--- a/css/index.html
+++ b/css/index.html
@@ -153,46 +153,85 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4"><a href="project.html">
+        <div class="col-md-4"><a href="https://github.com/AnkittSharmaa/UrTypingFriend/">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
+              <span class="ico-circle"><i class="ion-social-sass"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Machine Learning</h2>
+              <h2 class="s-title"><a href="https://urtypingfriend.netlify.app/">UrTypingSpeed</a></h2>
               <p class="s-description text-center">
-                Currently exploring Machine Learning and Artifical Intelligence.</a>
+                <a href="https://github.com/AnkittSharmaa/UrTypingFriend/">Web App to Check Typing Speed built with Reactjs, SCSS, etc.</a>
               </p>
             </div>
           </div>
-        </div><a href="project.html">
+        </div><a href="https://github.com/AnkittSharmaa/UrShop">
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="ion-code-working"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Web Development</h2>
+              <h2 class="s-title">UrShop</h2>
               <p class="s-description text-center">
-                I have developed some full stack web projects using MERN Stack and Firebase.<br></a>
+                Full Fledged Shopping Website built with Reactjs, Firebase, etc.<br></a>
               </p>
             </div>
           </div>
-        </div><a href="project.html">
+        </div><a href="https://github.com/Anshika321/YOUR-SPACE">
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-code"></i></span>
+              <span class="ico-circle"><i class="ion-social-nodejs"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Python Project</h2>
+              <h2 class="s-title"><a href="https://your-space123.herokuapp.com/">Your Space</a></h2>
               <p class="s-description text-center">
-                Voice Based Assistant which do all daily tasks</a>
+                <a href="https://github.com/Anshika321/YOUR-SPACE">Web App with ToDo list, Note Taking, Latest News, Dictionary, etc.</a>
               </p>
             </div>
           </div>
-        </div><a href="project.html">
-       
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-android-cloud-outline"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title"><a href="https://github.com/AnkittSharmaa/CF-Stalker">CF Stalker</a></h2>
+              <p class="s-description text-center">
+                <a href="https://github.com/AnkittSharmaa/CF-Stalker">Website for anlystics visualisation of Codeforces Users</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-social-javascript"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title"><a href="https://pomber.github.io/covid19/timeseries.json">Covid19 - QGIS</a></h2>
+              <p class="s-description text-center">
+                <a href="https://github.com/AnkittSharmaa/Covid-19-Status-Using-QGIS-Mapping">Mapped Covid 19 Cases graphically and on map using QGIS</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-social-python"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title"><a href="https://github.com/AnkittSharmaa/Lira-personal_assistant/">LIRA</a></h2>
+              <p class="s-description text-center">
+                <a href="https://github.com/AnkittSharmaa/Lira-personal_assistant">Voice Based Assistant built using various pip packages and tkinter</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
   </section>
