Resume and project page add

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             <a class="nav-link js-scroll" href="#work">Education</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll" href="/resume.html">Resume</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
           </li>
         </ul>
@@ -94,12 +97,12 @@
                       <p><span class="title-s">Name: </span> <span>Ankit Sharma</span></p>
                       <p><span class="title-s">Profile: </span> <span>B-Tech (IT)</span></p>
                       <p><span class="title-s">Email: </span> <span>ankitbalotra1@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>+919797536282</span></p>
+                      <!-- <p><span class="title-s">Phone: </span> <span>+919797536282</span></p> -->
                     </div>
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Skill</p>
+                  <p class="title-s">Skills</p>
                   <button type="button " class="skill-btn btn btn-info">C </button>
                   <button type="button " class="skill-btn btn btn-info">C++</button>
                   <button type="button " class="skill-btn btn btn-info">Python</button>
@@ -142,12 +145,15 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="title-box text-center">
-            <h3 class="title-a">
+            <a href="/project.html">
+            <h3 class="title-a" style="color: #53505f">
               Project
             </h3>
+          
             <p class="subtitle-a">
               <b>“Management is, above all, a practice where art, science, and craft meet.”</b>
             </p>
+          </a>
             <div class="line-mf"></div>
           </div>
         </div>
@@ -419,10 +425,6 @@
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                      <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                      expedita aperiam aliquid at.
-                      Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                      mollitia inventore? -->
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Kathua, Jammu and Kashmir, India</li>
