--- a/resume.html
+++ b/resume.html
@@ -41,16 +41,16 @@
                         <a class="nav-link js-scroll active" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="/index.html">About</a>
+                        <a class="nav-link js-scroll" href="/cv/index.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="/index.html">Projects</a>
+                        <a class="nav-link js-scroll" href="/cv/index.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="/index.html">Education</a>
+                        <a class="nav-link js-scroll" href="/cv/index.html">Education</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="/resume.html">Resume</a>
+                        <a class="nav-link js-scroll" href="/cv/resume.html">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll" href="#contact">Contact</a>
