--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a class="nav-link js-scroll" href="#work">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="/resume.html">Resume</a>
+            <a class="nav-link js-scroll" href="/cv/resume.html">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -145,7 +145,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="title-box text-center">
-            <a href="/project.html">
+            <a href="/cv/project.html">
             <h3 class="title-a" style="color: #53505f">
               Project
             </h3>
