--- a/project.html
+++ b/project.html
@@ -41,7 +41,7 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="index.html">Home</a>
+            <a class="nav-link js-scroll" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#web">Web Development</a>
