--- a/resume.html
+++ b/resume.html
@@ -38,19 +38,19 @@
             <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll active" href="/index.html">Home</a>
+                        <a class="nav-link js-scroll active" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="/index.html">About</a>
+                        <a class="nav-link js-scroll" href="/">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="/index.html">Projects</a>
+                        <a class="nav-link js-scroll" href="/">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="/index.html">Education</a>
+                        <a class="nav-link js-scroll" href="/">Education</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="/resume.html">Resume</a>
+                        <a class="nav-link js-scroll" href="/cv/resume.html">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll" href="#contact">Contact</a>
