--- a/project.html
+++ b/project.html
@@ -173,7 +173,7 @@
 
                             <div>
                                 <h3 style="text-align: center; font-size: 29px; padding-top: 2rem;">
-                                    Mini Project
+                                    To be Completed
                                 </h3>
                                 <h3 class="title-left"><b><a
                                             href="https://github.com/AnkittSharmaa/UrShop">UrShop</a></b></h3>
