--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,6 @@
                         <a class="nav-link js-scroll active" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-<<<<<<< HEAD
                         <a class="nav-link js-scroll" href="/">About</a>
                     </li>
                     <li class="nav-item">
@@ -49,15 +48,13 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll" href="/">Education</a>
-=======
                         <a class="nav-link js-scroll" href="/cv/index.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="/cv/index.html">Projects</a>
+                        <a class="nav-link js-scroll" href="/cv/project.html">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll" href="/cv/index.html">Education</a>
->>>>>>> 2ea68fe71fd2cd9c4a503f00be8ec10cf86ea748
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll" href="/cv/resume.html">Resume</a>
