--- a/project.html
+++ b/project.html
@@ -153,20 +153,13 @@
                                     alt="CF Stalker" style="width:100%;height:100%;" class="img-project">
                                 <p class="project-desc">
                                     This is website for analytics visualization site for Codeforces online judge users using Codeforces API.
-                                    Current features included are: Verdicts chart
-                                    Languages chart
-                                    Tags chart
-                                    Levels chart
-                                    Total tried problems count
-                                    Total solved problems count
-                                    Average and max attempts
-                                    Count of problems solved with one submission
-                                    Max AC for a single problem (It indicates in how many ways someone solved a problem)
-                                    List of unsolved problems
+                                    Current features included are: Verdicts chart, Languages chart, Tags chart, Levels chart, Total tried 
+                                    problems count, Total solved problems count, Average and max attempts, Count of problems solved with 
+                                    one submission, Max AC for a single problem (It indicates in how many ways someone solved a problem)  .                                 List of unsolved problems
                                     <br>
-                                    <b>Tech Used: JavaScript, Node.js, Express, HTML, CSS, Bootstrap, MongoDB</b>
+                                    <b>Tech Used:React.js, Node.js, CodeForces API, HTML, CSS</b>
                                 </p>
-                                <I style="color: #ff37c0;"><a href="https://github.com/AnkittSharmaa/virtual-darshan"
+                                <I style="color: #ff37c0;"><a href="https://github.com/AnkittSharmaa/CF-Stalker"
                                         style="color: #ff37c0;">Github</a></I><br>
                                 <I style="color: #ff37c0;">March 2022</I>
                             </div>
