--- a/project.html
+++ b/project.html
@@ -148,7 +148,7 @@
 
                             <div>
                                 <h3 class="title-left"><b><a
-                                            href="https://github.com/AnkittSharmaa/CF-Stalker">CF Stalker</a></b></h3>
+                                            href="https://cfstalker.netlify.app/">CF Stalker</a></b></h3>
                                 <img src="https://www.linkpicture.com/q/Screenshot-from-2022-08-15-22-02-40.png"
                                     alt="CF Stalker" style="width:100%;height:100%;" class="img-project">
                                 <p class="project-desc">
