--- a/project.html
+++ b/project.html
@@ -50,6 +50,9 @@
                         <a class="nav-link js-scroll" href="#python">Python</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link js-scroll" href="/cv/resume.html">Resume</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link js-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
