--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
                 <div class="container">
                     <center>
                         <h1 style="color: #301e2a; padding: 20px;">Ankit Sharma Resume</h1>
-                        <object data="/assets/Ankit_Sharma_Resume.pdf" width="800" height="800"></object>
+                        <embed src="/cv/assets/Ankit_Sharma_Resume.pdf" width="800px" height="2100px" />
                     </center>
                 </div>
             </div>
