--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
             <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll active" href="/">Home</a>
+                        <a class="nav-link js-scroll active" href="/cv/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll" href="/cv/project.html">Projects</a>
