--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,11 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <center>
-          <embed src="/cv/assets/Ankit_Sharma_Resume.pdf" width="800px" height="1050px" style="padding-top:100px"/>
+           <object data="/cv/assets/Ankit_Sharma_Resume.pdf" type="application/pdf" width="90%" height="1000px" style="padding-top: 60px;"> 
+            <p>It appears you don't have a PDF plugin for this browser.
+             No biggie... you can <a href="/cv/assets/Ankit_Sharma_Resume.pdf">click here to
+            download the PDF file.</a></p>  
+          </object>
       </center>
       </div>
     </div>
