--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,7 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <center>
-           <object data="/cv/assets/Ankit_Sharma_Resume.pdf" type="application/pdf" width="90%" height="1000px" style="padding-top: 60px;"> 
+           <object data="/cv/assets/Ankit_Sharma_Resume.pdf" type="application/pdf" width="75%" height="1000px" style="padding-top: 60px;"> 
             <p>It appears you don't have a PDF plugin for this browser.
              No biggie... you can <a href="/cv/assets/Ankit_Sharma_Resume.pdf">click here to
             download the PDF file.</a></p>  
@@ -143,7 +143,7 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Kathua, Jammu and Kashmir, India</li>
-                      <li><span class="ion-ios-telephone"></span>+91 9797536282</li>
+<!--                       <li><span class="ion-ios-telephone"></span>+91 9797536282</li> -->
                       <li><span class="ion-email"></span> ankitbalotra1@gmail.com</li>
                     </ul>
                   </div>
