--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Kathua, Jammu and Kashmir, India</li>
-                      <li><span class="ion-ios-telephone"></span>+91 9797536282</li>
+<!--                       <li><span class="ion-ios-telephone"></span>+91 9797536282</li> -->
                       <li><span class="ion-email"></span> ankitbalotra1@gmail.com</li>
                     </ul>
                   </div>
