--- a/project.html
+++ b/project.html
@@ -250,7 +250,7 @@
                                     <div class="col-md-12 mb-3">
                                         <div class="form-group">
                                             <input type="url" class="form-control input-mf" id="inputUrl"
-                                                placeholder="Website">
+                                                placeholder="Title">
                                         </div>
                                     </div>
                                     <div class="col-md-12 mb-3">
